; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_StandbyReleaseAllLocks.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_StandbyReleaseAllLocks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@DEBUG2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"release all standby locks\00", align 1
@RecoveryLockLists = common dso_local global i32 0, align 4
@HASH_REMOVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @StandbyReleaseAllLocks() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = load i32, i32* @DEBUG2, align 4
  %4 = call i32 @trace_recovery(i32 %3)
  %5 = call i32 @elog(i32 %4, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @RecoveryLockLists, align 4
  %7 = call i32 @hash_seq_init(i32* %1, i32 %6)
  br label %8

8:                                                ; preds = %11, %0
  %9 = call %struct.TYPE_4__* @hash_seq_search(i32* %1)
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %2, align 8
  %10 = icmp ne %struct.TYPE_4__* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @StandbyReleaseLockList(i32 %14)
  %16 = load i32, i32* @RecoveryLockLists, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %18 = load i32, i32* @HASH_REMOVE, align 4
  %19 = call i32 @hash_search(i32 %16, %struct.TYPE_4__* %17, i32 %18, i32* null)
  br label %8

20:                                               ; preds = %8
  ret void
}

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @trace_recovery(i32) #1

declare dso_local i32 @hash_seq_init(i32*, i32) #1

declare dso_local %struct.TYPE_4__* @hash_seq_search(i32*) #1

declare dso_local i32 @StandbyReleaseLockList(i32) #1

declare dso_local i32 @hash_search(i32, %struct.TYPE_4__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
